logs/build_openvino_20260623_1009.log
CMAKE_BUILD_TYPE=Release
-- ccache found, compilation results will be cached. Disable with GGML_CCACHE=OFF.
-- CMAKE_SYSTEM_PROCESSOR: x86_64
-- GGML_SYSTEM_ARCH: x86
-- Including CPU backend
-- x86 detected
-- Adding CPU backend variant ggml-cpu: -march=native 
-- Including OPENVINO backend
-- ggml version: 0.15.2
-- ggml commit:  84de01a1f-dirty
-- OpenSSL found: 3.0.13
-- Generating embedded license file for target: llama-app
-- Configuring done (1.1s)
-- Generating done (0.2s)
-- Build files have been written to: /home/fekerr/src/irislime1/build/openvino_release
============================================================
🚀 RUNNING COMPILATION PASS...
============================================================
[  0%] Built target llama-common-base
[  1%] Built target llama-ui-embed
[  3%] Built target ggml-base
[  3%] Built target cpp-httplib
[  3%] Built target llama-gemma3-cli
[  4%] Built target llama-llava-cli
[  4%] Built target llama-minicpmv-cli
[  5%] Built target llama-qwen2vl-cli
[  5%] Provisioning UI assets
[  9%] Built target ggml-cpu
[  9%] Building CXX object ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/openvino/pass/squeeze_matmul.cpp.o
[ 10%] Building CXX object ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/openvino/pass/fuse_to_sdpa.cpp.o
[ 10%] Building CXX object ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/openvino/translate_session.cpp.o
-- UI: running npm install
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:32: error: expected identifier before string constant
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:32: error: expected ‘,’ or ‘...’ before string constant
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
<command-line>: error: ISO C++ forbids declaration of ‘OPENVINO_RTTI_BASE’ with no type [-fpermissive]
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: error: expected ‘;’ at end of member declaration
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/build.make:636: ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/openvino/pass/squeeze_matmul.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/fuse_to_sdpa.h:15:32: error: expected identifier before string constant
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::FuseToSDPA")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/fuse_to_sdpa.h:15:32: error: expected ‘,’ or ‘...’ before string constant
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::FuseToSDPA")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
<command-line>: error: ISO C++ forbids declaration of ‘OPENVINO_RTTI_BASE’ with no type [-fpermissive]
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/fuse_to_sdpa.h:15:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::FuseToSDPA")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: error: expected ‘;’ at end of member declaration
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/fuse_to_sdpa.h:15:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::FuseToSDPA")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/build.make:622: ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/openvino/pass/fuse_to_sdpa.cpp.o] Error 1
-- UI: npm install failed (1)
--   stderr: npm ERR! code EBADENGINE
npm ERR! engine Unsupported engine
npm ERR! engine Not compatible with your version of node/npm: @chromatic-com/storybook@5.0.0
npm ERR! notsup Not compatible with your version of node/npm: @chromatic-com/storybook@5.0.0
npm ERR! notsup Required: {"node":">=20.0.0","yarn":">=1.22.18"}
npm ERR! notsup Actual:   {"npm":"9.2.0"}

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/fekerr/.npm/_logs/2026-06-23T17_09_25_406Z-debug-0.log

-- UI: HF stamp 'b9741' matches version, skipping HF fetch
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/mark_decompression_convert_constant_folding.h:32:32: error: expected identifier before string constant
   32 |     OPENVINO_MATCHER_PASS_RTTI("MarkCompressedFloatConstants")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/mark_decompression_convert_constant_folding.h:32:32: error: expected ‘,’ or ‘...’ before string constant
   32 |     OPENVINO_MATCHER_PASS_RTTI("MarkCompressedFloatConstants")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
<command-line>: error: ISO C++ forbids declaration of ‘OPENVINO_RTTI_BASE’ with no type [-fpermissive]
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/mark_decompression_convert_constant_folding.h:32:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   32 |     OPENVINO_MATCHER_PASS_RTTI("MarkCompressedFloatConstants")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: error: expected ‘;’ at end of member declaration
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/mark_decompression_convert_constant_folding.h:32:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   32 |     OPENVINO_MATCHER_PASS_RTTI("MarkCompressedFloatConstants")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:32: error: expected identifier before string constant
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:32: error: expected ‘,’ or ‘...’ before string constant
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: note: in definition of macro ‘OPENVINO_MATCHER_PASS_RTTI’
<command-line>: error: ISO C++ forbids declaration of ‘OPENVINO_RTTI_BASE’ with no type [-fpermissive]
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
<command-line>: error: expected ‘;’ at end of member declaration
/home/fekerr/src/irislime1/llama.cpp/ggml/src/ggml-openvino/openvino/pass/squeeze_matmul.h:15:5: note: in expansion of macro ‘OPENVINO_MATCHER_PASS_RTTI’
   15 |     OPENVINO_MATCHER_PASS_RTTI("ov::frontend::ggml::pass::SqueezeMatmul")
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/build.make:650: ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/openvino/translate_session.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:681: ggml/src/ggml-openvino/CMakeFiles/ggml-openvino.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
-- UI: gzip compression applied (/home/fekerr/src/irislime1/build/openvino_release/tools/ui/dist/_gzip)
[ 10%] Built target llama-ui-assets
make: *** [Makefile:136: all] Error 2

🔴 BUILD FAILED (Exit Code: 2)
